--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "devDependencies": {
     "jest": "^29.3.1",
     "superwstest": "^2.0.3"
+  },
+  "dependencies": {
+    "prompt-sync": "^4.2.0"
   }
 }
